fixed buttons being hidden by bottom bar

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -2,6 +2,7 @@
 body {
     background: #fff;
     font-family: Work Sans;
+    padding-bottom: 40px;
 }
 
 h1 {
